--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
     <groupId>nostr.si4n6r</groupId>
     <artifactId>shibboleth</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <dependencies>
         <dependency>
             <groupId>nostr.si4n6r</groupId>
@@ -18,26 +17,6 @@
             <groupId>nostr.si4n6r</groupId>
             <artifactId>si4n6r-util</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>nostr-java</groupId>
-            <artifactId>nostr-java-api</artifactId>
-            <version>0.3-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>nostr-java</groupId>
-            <artifactId>nostr-java-client</artifactId>
-            <version>0.3-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>nostr-java</groupId>
-            <artifactId>nostr-java-id</artifactId>
-            <version>0.3-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>nostr-java</groupId>
-            <artifactId>nostr-java-event</artifactId>
-            <version>0.3-SNAPSHOT</version>
         </dependency>
 
         <!-- Test Dependencies -->
@@ -53,8 +32,19 @@
             <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>nostr.si4n6r</groupId>
+            <artifactId>si4n6r-storage</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>si4n6r-storage-fs</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-
     <build>
         <pluginManagement>
             <plugins>
@@ -73,31 +63,12 @@
                         </annotationProcessorPaths>
                     </configuration>
                 </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.1.2</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>3.1.2</version>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>integration-test</goal>
-                                <goal>verify</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
             </plugins>
         </pluginManagement>
     </build>
-
     <properties>
-        <maven.compiler.source>19</maven.compiler.source>
-        <maven.compiler.target>19</maven.compiler.target>
+        <maven.compiler.source>20</maven.compiler.source>
+        <maven.compiler.target>20</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Test Dependency Versions -->
