--- a/shibboleth-lib/pom.xml
+++ b/shibboleth-lib/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>si4n6r-util</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.4.0</version>
+        </dependency>
 
         <!-- Test Dependencies -->
         <dependency>
