--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,8 @@
     <properties>
         <lombok.version>1.18.24</lombok.version>
 
+        <java-jwt.version>4.4.0</java-jwt.version>
+
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
