--- a/shibboleth-lib/pom.xml
+++ b/shibboleth-lib/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
-            <version>4.4.0</version>
+            <version>${java-jwt.version}</version>
         </dependency>
 
         <!-- Test Dependencies -->
