--- a/shibboleth-lib/pom.xml
+++ b/shibboleth-lib/pom.xml
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>nostr.si4n6r</groupId>
             <artifactId>si4n6r-storage</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
