--- a/shibboleth-web/pom.xml
+++ b/shibboleth-web/pom.xml
@@ -69,6 +69,12 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>
+                nostr.si4n6r</groupId>
+            <artifactId>shibboleth-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>nostr.si4n6r</groupId>
             <artifactId>si4n6r-util</artifactId>
             <version>${project.version}</version>
@@ -91,7 +97,7 @@
         <dependency>
             <groupId>nostr.si4n6r</groupId>
             <artifactId>bottin-jpa</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <!--  WICKET DEPENDENCIES -->
         <dependency>
