--- a/shibboleth-lib/pom.xml
+++ b/shibboleth-lib/pom.xml
@@ -19,6 +19,11 @@
         </dependency>
         <dependency>
             <groupId>nostr.si4n6r</groupId>
+            <artifactId>si4n6r-jpa</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>nostr.si4n6r</groupId>
             <artifactId>si4n6r-util</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -27,7 +32,11 @@
             <artifactId>java-jwt</artifactId>
             <version>${java-jwt.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>nostr.si4n6r</groupId>
+            <artifactId>si4n6r-rest</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!-- Test Dependencies -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
