--- a/shibboleth-web/pom.xml
+++ b/shibboleth-web/pom.xml
@@ -69,8 +69,12 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>
-                nostr.si4n6r</groupId>
+            <groupId>nostr.si4n6r</groupId>
+            <artifactId>bottin-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>nostr.si4n6r</groupId>
             <artifactId>shibboleth-api</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -86,8 +90,8 @@
         </dependency>
         <dependency>
             <groupId>nostr.si4n6r</groupId>
-            <artifactId>si4n6r-core</artifactId>
-            <version>${project.version}</version>
+            <artifactId>si4n6r-storage</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>nostr.si4n6r</groupId>
